# sop-ls

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: list_core.h  options.h  output_utils.h
src/: CMakeLists.txt  list_core.c  main.c  output_utils.c
